[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfundlib"
version = "0.1.4"
description = "End-to-End Python Framework for Algorithmic Trading: Backtesting, ML Alpha, Live Execution & Automation"
readme = "README.md"
requires-python = ">=3.10"                  # Drop 3.9 — torch dropped support in 2.4+
license = { text = "MIT" }
authors = [{ name = "Himanshu Dixit", email = "hima@pyfund.tech" }]
keywords = [
  "algorithmic-trading",
  "quantitative-finance",
  "backtesting",
  "machine-learning",
  "live-trading",
  "portfolio-optimization",
  "automated-trading",
  "ml-alpha",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pydantic :: 2",              # if you ever add pydantic (common in 2025)
]

dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "torch>=2.1.0",                            # 2.4+ has major speedups
  "xgboost>=2.0.0",
  "mlflow>=2.12.0",                          # latest stable as of Nov 2025
  "apscheduler>=3.10.4",
  "yfinance>=0.2.40",
  "pyarrow>=14.0.0",                         # required for fast parquet
  "seaborn>=0.13.0",                         # for your beautiful plots
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "black>=24.0",
  "ruff>=0.6.0",
  "mypy>=1.11",
  "pre-commit",
  "sphinx>=7.0",
  "sphinx-rtd-theme",
  "jupyterlab>=4.0",
  "streamlit>=1.38.0",                       # for dashboard example
]
# Optional: extra performance / broker packages
broker = [
  "alpaca-py>=3.0 ; python_version >= "3.10"",
  "kiteconnect>=4.4.0",                        # Zerodha
  # "ib_insync",                             # uncomment when ready
]
full = ["pyfundlib[dev]", "pyfundlib[broker]"]

[project.urls]
Homepage = "https://pyfund.tech"
Documentation = "https://pyfundlib.readthedocs.io/en/latest/"
Repository = "https://github.com/Hima-D/pyfundlib"
Issues = "https://github.com/Hima-D/pyfundlib/issues"
Changelog = "https://github.com/Hima-D/pyfundlib/releases"

[project.scripts]
pyfundlib = "pyfundlib.cli:main"             # ← match your package name

[tool.hatch.version]
source = "vcs"                               # hatch-vcs is cleaner than path

[tool.hatch.build.targets.wheel]
packages = ["src/pyfundlib"]                 # ← IMPORTANT: match your src folder!

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # let black handle line length

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true