[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfundlib"
dynamic = ["version"]
description = "End-to-End Python Framework for Algorithmic Trading: Backtesting, ML Alpha, Live Execution & Automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Himanshu Dixit", email = "hima@pyfund.tech" }]
keywords = [
  "algorithmic-trading",
  "quantitative-finance",
  "backtesting",
  "machine-learning",
  "live-trading",
  "portfolio-optimization",
  "automated-trading",
  "ml-alpha",
  "econometrics",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Development Status :: 5 - Production/Stable",
]

dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "torch>=2.1.0",
  "xgboost>=2.0.0",
  "mlflow>=2.12.0",
  "apscheduler>=3.10.4",
  "yfinance>=0.2.40",
  "pyarrow>=14.0.0",
  "seaborn>=0.13.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "black>=24.0",
  "ruff>=0.6.0",
  "mypy>=1.11",
  "pre-commit",
  "sphinx>=7.0",
  "sphinx-rtd-theme",
  "jupyterlab>=4.0",
  "streamlit>=1.38.0",
]

broker = [
  "alpaca-py>=3.0",
  "kiteconnect>=4.4.0",
]

full = [
  "pyfundlib[dev]",
  "pyfundlib[broker]",
]

[project.urls]
Homepage = "https://pyfund.tech"
Documentation = "https://pyfundlib.readthedocs.io/en/latest/"
Repository = "https://github.com/Hima-D/pyfundlib"
Issues = "https://github.com/Hima-D/pyfundlib/issues"

[project.scripts]
pyfundlib = "pyfundlib.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfundlib"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
